More attempts at preventing the build from getting killed on Circle CI by changing memory limits and disabling Kotlin compiler daemon